@@ -1,5 +1,15 @@
 2008-07-30  Bastien Nocera  <hadess@hadess.net>
 
+	* data/lirc_example:
+	* src/plugins/lirc/Makefile.am:
+	* src/plugins/lirc/totem-lirc.c (impl_activate):
+	* src/plugins/lirc/totem_lirc_default: Update lirc plugin
+	to read from a default configuration file, and not fail when there's
+	no user configuration. This allows Totem to work out-of-the-box on the
+	majority of remotes as setup by gnome-lirc-properties
+
+2008-07-30  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in:
 	* src/plugins/pythonconsole/Makefile.am:
 	* src/plugins/pythonconsole/console.py:
